# MAB2

./: __init__.py  agents.py  bandit_env.py  experiments.py  run_assignment_baseline.sh  run_assignment_bonus.sh
MAB/: CHECKLIST.md  README.md  agents.py  bandit_env.py  pyproject.toml  run_assignment_baseline.sh  run_assignment_bonus.sh
MAB/mab_student.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
MAB/plots/: summary.csv
MAB/plots_assignment/: summary.csv
MAB/plots_assignment_bonus/: summary.csv
