[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mab-student"
version = "0.1.0"
description = "Student scaffold for Multi-Armed Bandits (Assignment 1)"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Mehul Bafna" }]
dependencies = [
  "numpy>=1.24",
  "gymnasium>=0.29",
  "matplotlib>=3.8",
]

[project.scripts]
mab-student = "MAB.experiments:main"

[tool.setuptools]
packages = ["MAB"]
package-dir = {"MAB" = "."}

